--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
   <header id="head">
+    <img src="/images/menu.png" alt="Menu" id="hamburgerButton" onclick="menu()">
     <div id="bar">
         <section>
             <img src="/images/logo.png" alt="">
@@ -36,6 +37,7 @@
   <div id="startTitle">
     <h1>Goodbye junk food. Hello super healthy meals.</h1>
   </div>
+  <img src="/images/logo-white.png" id="startlogo" alt="">
 
   <div id="mainContent">
       <div style="padding: 20px;">
